--- a/build.gradle
+++ b/build.gradle
@@ -19,8 +19,12 @@ repositories {
 }
 
 dependencies {
-    testRuntimeOnly('org.junit.platform:junit-platform-launcher')
-    implementation('org.springframework.boot:spring-boot-starter-web')
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+    // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-webtestclient
+    implementation("org.springframework.boot:spring-boot-webtestclient:4.0.1")
 }
 
 tasks.named('test') {
